# shimmy

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build-cli.yml  build-tauri.yml  build.yml
shimmy-cli/: Cargo.toml  LICENSE
shimmy-cli/src/: cli.rs  error.rs  main.rs  middleman.rs  utils.rs
shimmy-common/: Cargo.toml
shimmy-common/src/: common_structs.rs  lib.rs
tauri-app/: package-lock.json  package.json
tauri-app/src/: app.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: commands.rs  errors.rs  lib.rs  main.rs  utils.rs
tauri-app/src-tauri/src/shimmy_server/: routes.rs  structs.rs
tauri-app/src/lib/: utils.ts
tauri-app/src/lib/components/inspector/: JsonViewer.svelte  RequestPanel.svelte  ResponsePanel.svelte  StatusBadge.svelte  TimelineEntry.svelte  TimelinePanel.svelte  Toolbar.svelte
tauri-app/src/lib/components/ui/scroll-area/: scroll-area-scrollbar.svelte
tauri-app/src/lib/data/: mock-data.ts
tauri-app/src/lib/types/: emittedMessages.ts  inspector.ts
tauri-app/src/routes/: +layout.svelte  +page.svelte
