[package]
name = "shimmy-cli"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
rmcp = { version = "1.2.0", features = [
    "client",
    "server",
    "reqwest",
    "transport-io",
    "transport-child-process",
    "transport-streamable-http-client",
    "transport-streamable-http-client-reqwest",
]}
tokio = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.13", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
shimmy-common = { path = "../shimmy-common" }
